--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 
-                    <div class="dropdown-menu" ng-class="{'show': isDropdownOpen}">
+                    <div class="dropdown-menu">
                         <a class="dropdown-item">Előétel</a>
                         <a class="dropdown-item">Főétel</a>
                         <a class="dropdown-item">Köret</a>
