--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Somodi Konrád Turmixcombó</title>
     <link rel="stylesheet" href="Assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="Assets/css/style.css">
 </head>
@@ -63,6 +62,13 @@
               </div>
             </div>
         </nav>
+        <section class="hero">
+          <div class="container">
+            <h1>Üdvözöljük a Weboldalon</h1>
+            <p>Ez a hero image szekció. Használja ki a lehetőségeket!</p>
+            <a href="#" class="btn btn-primary btn-lg">Tudjon meg többet</a>
+          </div>
+        </section>
         <main>
             
 
