--- a/index.html
+++ b/index.html
@@ -5,33 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="Assets/css/style.css">
-    <style>
-        .hero {
-            position: relative; /* A navbar pozicionálásához */
-            overflow: hidden; /* A navbar-t ne vágja le */
-            padding: 0; /* Eltávolítja a paddingot, ha szükséges */
-        }
-
-        .hero .navbar {
-            width: 100%; /* A navbar kitölti a hero szélességét */
-            position: absolute; /* Pozicionálás a hero szekción belül */
-            top: 0; /* A hero tetején kezdődik */
-            left: 0;
-            z-index: 1000; /* A navbar legyen a hero szöveg felett */
-        }
-
-        .herotext {
-            text-align: center;
-            padding-top: 80px; /* Helyet hagy a navbar számára */
-            color: white; /* Szöveg szín */
-        }
-    </style>
+    
 </head>
 <body>
-  <section class="hero">
+  
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" style="color: black !important; font-size: larger; font-weight: bold;" href="#">Turmix</a>
+            <a class="navbar-brand" style="color: white !important; font-size: larger; font-weight: bold;" href="#">Turmix</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -80,15 +60,13 @@
             </div>
         </div>
     </nav>
-    <div class="container herotext">
-        <h1>Konrád’s Gatorade</h1>
-        <p>Drink it and be awesome, mert a boring nem opció!</p>
-        <a href="#" class="btn btn-primary btn-lg">Tovább!</a>
-    </div>
-  </section>
+
+    
+
   <main>
       <!-- Tartalom -->
   </main>
+  
   <footer></footer>
 
   <script src="Assets/js/bootstrap.bundle.min.js"></script>
