--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     
 
-  <main>
+  <main >
       <!-- Tartalom -->
   </main>
   
@@ -77,5 +77,6 @@
   <script src="Assets/js/app.js"></script>
   <!-- controllers -->
   <script src="Controllers/userCtrl.js"></script>
+  <script src="Controllers/dinamikusCtrl.js"></script>
 </body>
 </html>
