--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                             Ebéd
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Előétel</a></li>
-                            <li><a class="dropdown-item" href="#">Főétel</a></li>
-                            <li><a class="dropdown-item" href="#">Köret</a></li>
-                            <li><a class="dropdown-item" href="#">Desszert</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="render('appetizer')">Előétel</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="render('mainCourse')">Főétel</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="render('sideDish')">Köret</a></li>
+                            <li><a class="dropdown-item" href="#" onclick="render('dessert')">Desszert</a></li>
                         </ul>
                     </li>   
 
