--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
   <!-- controllers -->
   <script src="Controllers/userCtrl.js"></script>
   <script src="Controllers/dinamikusCtrl.js"></script>
+  <script src="Controllers/recipeCtrl.js"></script>
 </body>
 </html>
